<resources>
    <string name="app_name">FirebaseChat</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="signup">Sign Up</string>
    <string name="btn_signup">Sign Up</string>
    <string name="login">Log In</string>
    <string name="enter_ame">Enter Name</string>
    <string name="type_message">Type Message</string>
    <string name="label_sign_up">Sign Up</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="btn_login">Login</string>
    <string name="btn_save">Save</string>
    <string name="label_sign_in">Sign In</string>
    <string name="label_message">Message</string>
    <string name="label_profile">Profile</string>
    <string name="enter_confirm_password">Enter Confirm Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="received_message">Recieved Message</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save_changes">Save Changes</string>

</resources>