<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".SignUpActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gilroy_bold"
        android:text="@string/signup"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:textStyle="bold"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="15dp"
        />

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:inputType="text"
        android:background="@color/colorTextBackground"
        android:fontFamily="@font/gilroy_light"
        android:hint="@string/enter_name"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/colorDarkGray"
        android:textStyle="bold">



    </EditText>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:background="@color/colorTextBackground"
        android:fontFamily="@font/gilroy_light"
        android:hint="@string/enter_email"
        android:padding="10dp"
        android:textColor="@color/Black"
        android:textStyle="bold"
        android:textColorHint="@color/colorDarkGray"
        android:inputType="textEmailAddress">

    </EditText>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:background="@color/colorTextBackground"
        android:fontFamily="@font/gilroy_light"

        android:hint="@string/enter_password"
        android:padding="10dp"
        android:textColorHint="@color/colorDarkGray"
        android:textColor="@color/Black"
        android:textStyle="bold"
        android:autofillHints=""
        android:inputType="textPassword"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:background="@color/colorTextBackground"
        android:fontFamily="@font/gilroy_light"
        android:hint="@string/enter_confirm_password"
        android:textColorHint="@color/colorDarkGray"
        android:padding="10dp"
        android:inputType="textPassword"
        android:textColor="@color/Black"
        android:textStyle="bold"/>
    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:layout_margin="15dp"
        android:textColor="@color/colorAccent"
        android:text="@string/btn_signup"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="@color/colorDarkGray"
        android:textColor="@color/colorAccent"
        android:text="@string/btn_login"/>



</LinearLayout>


